k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: devops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: registry.gitlab.com/amirsobhan/todo-app:develop
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 300m
              ephemeral-storage: 100M
              memory: 600M
            requests:
              cpu: 300m
              ephemeral-storage: 100M
              memory: 600M
