k8s/app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: devops-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: app
